// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > props > checked 1`] = `
<div>
  <label
    class="t-radio t-is-checked"
    tabindex="0"
  >
    <input
      checked=""
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio > props > checked 2`] = `
<div>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio > props > checked is equal to true 1`] = `
<div>
  <label
    class="t-radio t-is-checked"
    tabindex="0"
  >
    <input
      checked=""
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
  </label>
</div>
`;

exports[`Radio > props > disabled 1`] = `
<div>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      disabled=""
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      Text
    </span>
  </label>
</div>
`;

exports[`Radio > props > disabled 2`] = `
<div>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      Text
    </span>
  </label>
</div>
`;

exports[`Radio > slots > children 1`] = `
<div>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio > slots > label 1`] = `
<div>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      tabindex="-1"
      type="radio"
      value=""
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </label>
</div>
`;
